--- a/style.css
+++ b/style.css
@@ -3,42 +3,40 @@
     padding: 0;
     box-sizing: border-box;
 }
-.ss{
-    position: absolute;
-    left: 800px;
-    bottom: 600px;
-    font-size: 90px;
-    color: white;
-}
-.ds{
-    position: absolute;
-    left: 1300px;
-    bottom: 550px;
-    font-size: 30px;
-    color: white;
-}
 div{
-    background: rgb(0,189,255);
-    background: linear-gradient(90deg, rgba(0,189,255,1) 0%, rgba(55,0,255,1) 0%);
-    width: 900px;
-    height: 300px;
+    margin: 200px auto;
+    display: block;
+    background-color: whitesmoke;
+    width: 600px;
+    height: 500px;
+     border: 0px solid rgba(100, 100, 100, 1);
+    border-radius: 4px;
+    box-shadow: 11px 7px 24px 0px rgba(0, 0, 0, 0.3);
+}
+label{
+    font-size: 20px;
+}
+label,input{
+    margin: 20px;
+}
+.img1{
+position: absolute;
+left: 1150px;
+top: 280px;
+width: 20px;
+color: green;
+}
+.img2{
     position: absolute;
-    bottom: 200px;
-    left: 700px;
-    box-shadow: -50px -40px 20px 0px rgba(0, 55, 255, 0.3);
-color: white;
+    left: 1150px;
+    top: 390px;
+    width: 20px;
+    color: green;
 }
-body{
-    background-color: rgb(0,0,0);
-background-color: linear-gradient(90deg, rgba(0,0,0,1) 51%, rgba(61,61,61,1) 52%);
-}
-div h1{
+.img3{
     position: absolute;
-    left: 50px;
-    bottom: 50px;
-    font-size: 200px;
-}
-.sd{
-    font-size: 50px;
-    text-align: center;
+    left: 1150px;
+    top: 500px;
+    width: 20px;
+    color: green;
 }
